<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="175dp">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="400dp"
        android:layout_height="145dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/container_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/kite_runner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/the_kite_runner"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/book_image"
        app:layout_constraintTop_toTopOf="@+id/imageview" />

    <TextView
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/by_khaled_hosseini"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/book_image"
        app:layout_constraintTop_toBottomOf="@id/book_title" />

    <TextView
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/rank"
        app:layout_constraintStart_toEndOf="@id/book_image"
        app:layout_constraintTop_toBottomOf="@id/book_author" />

    <TextView
        android:id="@+id/rank_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/_1"
        app:layout_constraintStart_toEndOf="@id/rank"
        app:layout_constraintTop_toBottomOf="@id/book_author" />

    <TextView
        android:id="@+id/isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/isbn"
        app:layout_constraintStart_toEndOf="@id/book_image"
        app:layout_constraintTop_toBottomOf="@id/rank" />

    <TextView
        android:id="@+id/isbn_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/_9789146219354"
        app:layout_constraintStart_toEndOf="@id/isbn"
        app:layout_constraintTop_toBottomOf="@id/rank_display" />

    <TextView
        android:id="@+id/publisher"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/publisher"
        app:layout_constraintStart_toEndOf="@id/book_image"
        app:layout_constraintTop_toBottomOf="@id/isbn"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/publisher_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/riverhead_books"
        app:layout_constraintStart_toEndOf="@id/publisher"
        app:layout_constraintTop_toBottomOf="@id/isbn_display" />


</androidx.constraintlayout.widget.ConstraintLayout>